Bump dependencies versions, Java 21, minor code cleanup. No API change.